--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hi)
+<!DOCTYPE html>
+<html>
+<head>
+    <title>CV</title>
+</head>
+<body>
+    <embed src="CVq1.pdf" type="application/pdf" width="100%" height="600px" />
+</body>
+</html>
