--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>CV</title>
 </head>
 <body>
-    <embed src="CVq1.pdf" type="application/pdf" width="100%" height="600px" />
+    <embed src="CVq.pdf" type="application/pdf" width="100%" height="600px" />
 </body>
 </html>
